commet to commit tribute

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <li>Knekkebrød (Crispbread): Snack on traditional Norwegian crispbread, topped with cheese, cured meats, or your favorite spreads for a satisfying bite on the go.</li>
     <li>Cloudberries: Treat yourself to the delicate sweetness of cloudberries, a wild berry native to Norway, often enjoyed fresh or in jams and desserts.</li>
     <li>Kvikk Lunsj: Grab a Kvikk Lunsj, a popular Norwegian chocolate bar similar to a KitKat, perfect for a quick and tasty snack during your journey.</li>
-    <li>Akevitt (Aquavit): Toast to your Norwegian adventure with a shot of Akevitt, a traditional Scandinavian spirit often enjoyed as a celebratory drink.</li>
+    <li>Akevitt: Toast to your Norwegian adventure with a shot of Akevitt, a traditional Scandinavian spirit often enjoyed as a celebratory drink.</li>
 </ul>
 
 </main>
