--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1 id="flam-journey-title">Flam Train Journey</h1>
         <p>Welcome to our guide to the Flam Station in Norway! Situated amidst the awe-inspiring fjord landscape, Flam Station stands out as a top attraction in the world, drawing travelers from far and wide. Surrounded by towering mountains and cascading waterfalls, this quaint station offers a captivating glimpse into the beauty of rural Norway. Comparable to renowned train journeys like Switzerland's Glacier Express and Canada's Rocky Mountaineer, the Flam Train journey is celebrated for its unrivaled scenery and engineering marvels. With its picturesque setting and seamless access to outdoor adventures, Flam Station serves as the perfect gateway to explore the wonders of Norwegian nature. So come and experience the magic of Flam, where every moment promises to be a breathtaking adventure.</p>
-        <img src="workspaces/flam-train-tribute\mountain_land.jpg" alt="Flam Mountain">
+        <img src="images_flam\mountain_land.jpg" alt="Flam Mountain">
     </header>
 
     <main>
