--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1 id="flam-journey-title">Flam Train Journey</h1>
         <p>Welcome to our guide to the Flam Station in Norway! Situated amidst the awe-inspiring fjord landscape, Flam Station stands out as a top attraction in the world, drawing travelers from far and wide. Surrounded by towering mountains and cascading waterfalls, this quaint station offers a captivating glimpse into the beauty of rural Norway. Comparable to renowned train journeys like Switzerland's Glacier Express and Canada's Rocky Mountaineer, the Flam Train journey is celebrated for its unrivaled scenery and engineering marvels. With its picturesque setting and seamless access to outdoor adventures, Flam Station serves as the perfect gateway to explore the wonders of Norwegian nature. So come and experience the magic of Flam, where every moment promises to be a breathtaking adventure.</p>
-        <img src="mountain_land.jpg" alt="Flam Mountain">
+        <img src="/flam-train-tribute/mountain_land.jpg" alt="Flam Mountain">
     </header>
 
     <main>
@@ -19,11 +19,11 @@
             Beyond the station, Flam town offers a wealth of activities for visitors to enjoy. You can explore the charming streets lined with colorful wooden houses, visit local museums to learn about the area's history and culture, or embark on a fjord cruise to marvel at the stunning natural beauty up close. For the adventurous souls, Flam is also a popular starting point for hiking and cycling trails, offering endless opportunities to immerse yourself in Norway's picturesque landscapes. Whether you're seeking relaxation or adventure, Flam has something for everyone, making it a must-visit destination in Norway.</p>
 
         <h2>The Journey in Norway</h2>
-        <img src="/workspaces/flam-train-tribute/lake_norway.jpg" alt="Norway Landscape">
+        <img src="/flam-train-tribute/lake_norway.jpg" alt="Norway Landscape">
         <p>The Flam Train journey is an unforgettable experience that spans approximately 20 kilometers (12 miles) in distance, taking travelers on a scenic voyage through some of Norway's most breathtaking landscapes. The journey is typically completed aboard the Flam Railway, a renowned model of railway engineering celebrated for its steep gradients and numerous tunnels. On board, passengers can expect comfortable seating and large windows, offering uninterrupted views of the stunning surroundings. As the train winds its way from Flam to Myrdal, passengers are treated to a visual feast of towering mountains, cascading waterfalls, and verdant valleys. Some of the notable landmarks along the route include the majestic Kjosfossen waterfall, the picturesque Aurlandsfjord, and the dramatic Flam Valley. While the Flam Train journey is enchanting year-round, the best time to embark on this adventure is during the summer months when the landscapes are lush and vibrant, and daylight hours are longer, allowing for more time to soak in the stunning scenery.</p>
        
         <h2>Images</h2>
-        <p><img src="images_flam\fishermen_huts.jpg" alt="Fishermen Huts"><img src="images_flam\flam station.jpg" alt="Flam Train Station"><a href="#flam-journey-title">
+        <p><img src="/flam-train-tribute/fishermen_huts.jpg" alt="Fishermen Huts"><img src="/flam-train-tribute/flam station.jpg" alt="Flam Train Station"><a href="#flam-journey-title">
 
         <h2>Resources</h2>
 <a href="https://www.youtube.com/watch?v=Lxua1U1Ke84">Watch a video about the Flam Line on YouTube</a><br>
