--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         <p><img src="/flam-train-tribute/fishermen_huts.jpg" alt="Fishermen Huts"><img src="/flam-train-tribute/flam_station.jpg" alt="Flam Train Station"></p>
         <a href="#flam-journey-title">
         
-            <p><a href="https://www.youtube.com/watch?v=Lxua1U1Ke84">Watch a video about the Flam Line on YouTube</a><br>
-                <a href="https://en.wikipedia.org/wiki/Fl%C3%A5m_Line">Learn more about the Flam Line on Wikipedia</a></p>
+            <p>
+                <a href="https://www.youtube.com/watch?v=Lxua1U1Ke84">Watch a video about the Flam Line on YouTube</a><br>
+                <a href="https://en.wikipedia.org/wiki/Fl%C3%A5m_Line">Learn more about the Flam Line on Wikipedia</a>
+            </p>
                 <h2>Resources</h2>
                 
             <h2>Internal Link</h2>
